Fix collapse after refactoring

--- a/app/assets/stylesheets/lesson.scss
+++ b/app/assets/stylesheets/lesson.scss
@@ -1,44 +1,3 @@
-.lesson-info {
-    cursor: default;
-    background-color: white;
-    margin-top: 10px;
-    h5 {
-        padding: 20px 0px 0px 35px;
-        margin-top: 20px;
-        font-weight: bold;
-        border-top: 1px solid #dddddd;
-    }
-    h5:first-child {
-        margin-top: 0px !important;
-    }
-    p {
-        margin-bottom: 0px;
-        padding-left: 35px;
-        padding-right: 35px;
-    }
-    .image-card-group {
-        padding-left: 35px;
-        padding-right: 35px;
-        margin: 20px 0px 35px 0px;
-        display: flex;
-        justify-content: space-between;
-    }
-    .image-card {
-        width: 25%;
-        display: inline-block;
-        flex: 0 1 auto;
-        margin-right: 15px;
-        margin-top: 0px;
-        h5 {
-            font-weight: unset !important;
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding: 0px;
-            border: unset;
-        }
-    }
- }
-
 .lesson-card-group {
     margin-bottom: 35px;
     margin-left:384px;
@@ -61,13 +20,19 @@
     }
     .lesson-content {
         @extend .lesson-header;
+        flex-wrap: wrap;
         margin-top: 0;
+        padding-left: 0 !important;
         padding-top: 5px !important;
         padding-bottom: 5px !important;
         margin-bottom: 5px !important;
         background-color:#FCFCFC;
         border: 1px solid #dddddd !important;
         cursor: pointer;
+
+        .header {
+            padding-left: 35px !important;
+        }
 
         span {
             margin-top: 10px;
@@ -103,6 +68,48 @@
 
             }
         }
+        .lesson-info {
+            cursor: default;
+            background-color: white;
+            margin-top: 10px;
+            width: 100%;
+            padding: 0;
+            h5 {
+                padding: 20px 0px 0px 35px;
+                margin-top: 20px;
+                font-weight: bold;
+                border-top: 1px solid #dddddd;
+            }
+            h5:first-child {
+                margin-top: 0px !important;
+            }
+            p {
+                margin-bottom: 0px;
+                padding-left: 35px;
+                padding-right: 35px;
+            }
+            .image-card-group {
+                padding-left: 35px;
+                padding-right: 35px;
+                margin: 20px 0px 35px 0px;
+                display: flex;
+                justify-content: space-between;
+            }
+            .image-card {
+                width: 25%;
+                display: inline-block;
+                flex: 0 1 auto;
+                margin-right: 15px;
+                margin-top: 0px;
+                h5 {
+                    font-weight: unset !important;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    padding: 0px;
+                    border: unset;
+                }
+            }
+         }
     }
     .lesson-content:hover {
         box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.05);
@@ -112,8 +119,8 @@
 }
 
 .lesson-content:hover {
-    border: 1px solid #CCCCCC !important;
-}
+        border: 1px solid #CCCCCC !important;
+    }
 .lesson-content:active {
-    border: 1px solid #CCCCCC !important;
-}
+        border: 1px solid #CCCCCC !important;
+    }
